sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:9: error: '<-' expected but '=' found.
    for (i=0 to taille-2) 
          ^AlgBubbleSort1:17: error: illegal start of simple expression
  }
  ^